# COSOAP

./: README.md  setup.py
COSOAP/: __main__.py  config.py  dedup.py  io.py  pyproject.toml  soap.py  utils.py
